devops/deploy/k8s-locadora-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: locadora-backend
  namespace: alysson
  labels:
    k8s-app: locadora-backend
    version: master
spec:
  #type: NodePort
  selector:
    k8s-app: locadora-backend
    version: master
  ports:
  - protocol: TCP
    port: 80
    targetPort: tcp-8080
